--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,17 +78,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: KOUFIBD
+      fonts:
+        - asset: fonts/KOUFIBD.TTF
+
+    - family: ElMessiri-SemiBold
+      fonts:
+        - asset: fonts/ElMessiri-SemiBold.ttf
+
+    - family: DTHULUTH
+      fonts:
+        - asset: fonts/DTHULUTH.TTF
+
+    - family: JF Flat regular
+      fonts:
+        - asset: fonts/JF Flat regular.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
